// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render UserBlock Should UserBlock logged render correctly 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <Link
      to="/mylist"
    >
      <img
        alt="User avatar"
        height="63"
        src="avatar.jpg"
        width="63"
      />
    </Link>
  </div>
</div>
`;

exports[`Render UserBlock Should UserBlock render correctly 1`] = `
<div
  className="user-block"
>
  <Link
    className="user-block__link"
    to="/login"
  >
    Sign in
  </Link>
</div>
`;
